@@ -2,7 +2,7 @@
 	$tourn_id   => undef
 	$site_id    => undef
 	$webpage_id => undef
-	$person    => undef
+	$person     => undef
 	$webname    => undef
 </%args>
 <%init> 
@@ -98,7 +98,7 @@
 				</div>
 %			}
 
-			<h4>Info</h4>
+			<h4>Invite & Packets</h4>
 
 %   		if ($tourn->setting("invite")) { 
 				<a class="green full" href="<% $Tab::s3_url %>/<% $tourn->id."/".$tourn->setting("invite") %>">
@@ -138,33 +138,51 @@
 
 			<h6>Info</h6>
 
-%			foreach my $webpage (sort {$a->page_order <=> $b->page_order} $tourn->webpages) { 
-%				next unless $webpage->published;
-%				next if $webpage->special;
-				<a class="<% $webpage_id == $webpage->id ? "dk" : ""%>yellow full" href="/index/tourn/index.mhtml?webpage_id=<% $webpage->id %>&tourn_id=<% $tourn->id %>"><% $webpage->title %></a>
-
-%			}
-
-%			my @postings = sort {$b->id <=> $a->id} Tab::File->search(tourn => $tourn_id, posting => 1);
+%			my @postings = sort {$b->id <=> $a->id} Tab::File->search(tourn => $tourn_id, type => "front");
 
 %			if (@postings) {
 
 %				foreach my $posting (@postings) { 
-					<a class="blue full" href="<% $Tab::s3_url %>/<% $tourn->id %>/postings/<% $posting->id %>/<% $posting->filename %>">
-						<% ($posting->label) ? $posting->label : $posting->filename %>
+					<a class="yellow full" href="<% $Tab::s3_url %>/<% $tourn->id %>/postings/<% $posting->id %>/<% $posting->filename %>">
+						<span class="threequarters nospace">
+							<% ($posting->label) ? $posting->label : $posting->filename %>
+						</span>
+						<span class="quarter centeralign fa fa-download">
+						</span>
 					</a>
 %				}
 %			}
 
 
-		
-%			if (Tab::Email->search( tourn => $tourn->id )) { 
-				 <a class="yellow full" href="/index/tourn/emails.mhtml?tourn_id=<% $tourn->id %>">Email Archive</a>
+%			foreach my $webpage (sort {$a->page_order <=> $b->page_order} $tourn->webpages) { 
+
+%				next unless $webpage->published;
+%				next if $webpage->special;
+
+				<a 
+					class="<% $webpage_id == $webpage->id ? "dk" : ""%>yellow full" 
+					href="/index/tourn/index.mhtml?webpage_id=<% $webpage->id %>&tourn_id=<% $tourn->id %>"
+				><% $webpage->title %></a>
+
 %			}
-			<a class="yellow full" href="/index/tourn/events.mhtml?tourn_id=<% $tourn->id %>">Events/Divisions</a>
+
+%			if (Tab::Email->search( tourn => $tourn->id )) { 
+				 <a 
+				 	class = "yellow full"
+					href  = "/index/tourn/emails.mhtml?tourn_id=<% $tourn->id %>"
+				>Email Archive</a>
+%			}
+
+			<a 
+				class = "yellow full"
+				href  = "/index/tourn/events.mhtml?tourn_id=<% $tourn->id %>"
+			>Events/Divisions</a>
 
 %			if ($tourn->setting("publish_schools")) { 
-				<a class="yellow full" href="/index/tourn/schools.mhtml?tourn_id=<% $tourn->id %>">Schools Registered</a>
+				<a 
+					class="yellow full" 
+					href="/index/tourn/schools.mhtml?tourn_id=<% $tourn->id %>"
+					>Schools Registered</a>
 %			}
 
 %			if ($tourn->webname && scalar @others > 1) { 
