@@ -132,7 +132,7 @@
 
 			<h4>Tournament-Wide</h4>
 
-%			foreach my $posting (sort {$b->id <=> $a->id} Tab::File->search(tourn => $tourn_id, result => 1)) { 
+%			foreach my $posting (sort {$b->id <=> $a->id} Tab::File->search(tourn => $tourn_id, type => "result")) { 
 
 %				next if $posting->event && $posting->event->id;
 			
