@@ -257,8 +257,7 @@
 				$chapter_judge = Tab::ChapterJudge->create({
 					chapter => $school->chapter->id,
 					first   => $first,
-					last    => $last,
-					started => $now->year
+					last    => $last
 				});
 			}
 		}
