@@ -38,8 +38,9 @@
 
 				<span class="half rightalign">
 %					if ($set) { 
-						<a class="dkred button" <& "/funclib/confirm.mas", warn => $warn &>  href="tiebreak_set_rm.mhtml?set_id=<% $set->id %>">
-							Delete Tiebreak Set
+						<a 
+							class="redtext buttonwhite button fa fa-lg fa-trash" <& "/funclib/confirm.mas", warn => $warn &>  
+							href="tiebreak_set_rm.mhtml?set_id=<% $set->id %>">
 						</a>
 %					}
 				</span>
@@ -181,33 +182,37 @@
 							 rounds<% $highlow %><% ($tiebreak->multiplier > 1) ? ", multiplied by ".$tiebreak->multiplier : "" %>
 					</span>
 
-					<span class="eighth">
-            	    	<a class="dkred button" href="tiebreak_rm.mhtml?tiebreak_id=<% $tiebreak->id %>">Delete</a>
+					<span class="eighth rightalign">
+            	    	<a 
+							class="redtext button buttonwhite fa fa-lg fa-trash"
+							href="tiebreak_rm.mhtml?tiebreak_id=<% $tiebreak->id %>"
+						></a>
 					</span>
 
 				</div>
 
 %			}
 
+			<br />
 
-			<table width="100%" cellpadding="5" cellspacing="1" class="martop">
+			<table>
 
 				<tr class="yellowrow"> 
-					<th class="smallish centeralign padno">
+					<th class="smallish centeralign">
 					</th>
-					<th class="smallish centeralign padno">
+					<th class="smallish centeralign">
 						Type
 					</th>
-					<th class="smallish centeralign padno">
+					<th class="smallish centeralign">
 						Priority
 					</th>
-					<th class="smallish centeralign padno">
+					<th class="smallish centeralign">
 						Rounds Counted
 					</th>
-					<th class="smallish centeralign padno">
+					<th class="smallish centeralign">
 						Multiply By
 					</th>
-					<th class="smallish centeralign padno">
+					<th class="smallish centeralign">
 						Ignore/Drop
 					</th>
 					<th></th>
@@ -216,9 +221,9 @@
 				<tr class="liblrow"> 
 				
 					<td>
-						Add
 						<form action="tiebreak_save.mhtml" method="post">
 						<input type="hidden" name="tiebreak_set_id" value="<% $set->id %>">
+						<span class="button fa fa-plus"></span>
 					</td> 
 					
 					<td class="centeralign">
