@@ -190,8 +190,9 @@
 					</span>
 
 					<span class="third rightalign nospace">
-						<a class="dkred button" href="circuit_rm.mhtml?circuit_id=<% $circuit->id %>">
-							Remove
+						<a 
+							class="redtext button buttonwhite fa fa-trash fa-lg" 
+							href="circuit_rm.mhtml?circuit_id=<% $circuit->id %>">
 						</a>
 					</span>
 
