@@ -32,9 +32,15 @@
 
 	<div class="main">
 
+
 %		if ($webpage || $webpage_type) { 
 
 			<h2><% ($webpage) ? "Edit ".$webpage->title : ucfirst($webpage_type)." Page" %></h2>
+
+			<p class="explain">
+				Please note: tournament web pages are cached and only re-generate
+				every 10 minutes.  Changes may not appear immediately.
+			</p>
 
 			<form action="website_save.mhtml" method="post">
 			<input type="hidden" name="webpage_id" value="<% $webpage_id %>">
@@ -114,6 +120,11 @@
 			tournament dates, and a link on registering for your tournament.
 			Tabroom.com also includes automatic posting of field reports, 
 			schematics, and results.
+			</p>
+
+			<p>
+				Please note: tournament web pages are cached and only re-generate
+				every 10 minutes.  Changes may not appear immediately.
 			</p>
 
 			<p>
