@@ -2,6 +2,7 @@
 	$tourn
 	$label   => "Posting"
 	$posting => undef
+	$type    => undef
 </%args>
 <%init>
 
